# atlas-gtnh

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/: worlds.py
backend/app/api/worlds/: __init__.py  chunk_ops.py  debug.py  dump.py  regions.py  routers.py  textures.py
backend/app/data/: dimensions.json
backend/app/models/: region.py  world.py
backend/app/services/: block_color_diagnostics.py  block_color_resolution.py  block_color_service.py  blockstate_resolver.py  chunk_ops_service.py  color_cache.py  dump_resolver.py  legacy_resolver.py  region_service.py  texture_service.py  vanilla_tables.py  world_validator.py
backend/app/services/blockcolor/: __init__.py  asset_database.py  blockstate_resolver.py  diagnostics.py  dump_resolver.py  legacy_resolver.py  resolution.py  scan_progress.py  service.py  vanilla_tables.py
backend/app/world/: block_registry.py  chunk_transform.py  region_reader.py  region_writer.py  session_lock.py  texture_colors.py
backend/tests/: test_block_color_service.py  test_chunk_ops.py  test_main.py  test_region_writer.py  test_regions.py  test_session_lock.py  test_worlds.py
documents/: architecture.md  world-format.md
frontend/: .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/.husky/: pre-commit
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: blockColors.ts  blockNames.ts  chunks.ts  dimensions.ts  dumpMismatch.ts  metaTextureKeys.ts  regions.ts  scanProgress.ts  textureKeys.ts  worlds.ts
frontend/src/components/: ChunkTools.tsx  ChunkViewer.tsx  DimensionPicker.tsx  DumpMismatchBanner.tsx  FilterPipelineInfo.tsx  InspectPanel.tsx  LoadingScreen.tsx  MenuBar.tsx  RegionDetail.tsx  RegionList.tsx  TextureDebugPanel.tsx  WorldMap.tsx  WorldPicker.tsx  blockInspector.ts  chunkOutline.ts  mapEngine.ts  mapScene.ts
frontend/src/lib/: blockColors.ts  (+10 more)
tools/forge-icon-dumper/: README.md  build.gradle  gradle.properties  gradlew  gradlew.bat
(+70 files in other folders)
