[project]
name = "atlas-gtnh"
version = "0.1.0"
description = "Atlas GTNH — Minecraft GT:NH world editor backend"
requires-python = ">=3.12"
dependencies = [
    "amulet-core",
    "nbtlib>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "pydantic>=2.7",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
desktop = [
    "PySide6>=6.7",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "httpx2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
